--- a/JobberCRM/docker-compose.yml
+++ b/JobberCRM/docker-compose.yml
@@ -1,11 +1,24 @@
 version: "3.8"
-# only for development not needed for production deployment 
+# only for development not needed for production deployment
 services:
   # FastAPI App Service
   app:
-    build: 
-        context: .
+    build:
+      context: .
     container_name: jobbercrm_app
+    env_file:
+      - .env
+    environment:
+      - POSTGRES_HOST=postgres
+      - POSTGRES_PORT=5432
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - DATABASE_PORT=5432
+      - CACHE_REDIS_PORT=6379
+      - GUNICORN_WORKERS=1
     volumes:
       - ./src:/app/src
     depends_on:
@@ -37,6 +50,8 @@ services:
   redis:
     image: redis:7.4
     container_name: jobbercrm_redis
+    ports:
+      - "6379:6379"
     networks:
       - jobbercrm_network
 
