--- a/HubspotCRM/requirements.txt
+++ b/HubspotCRM/requirements.txt
@@ -1,9 +1,9 @@
-flask==2.2.5
-flask-restx==1.0.5
-python-dotenv==1.0.0
-requests==2.31.0
-psycopg2-binary==2.9.9
-flask-sqlalchemy==3.0.3
-python-decouple==3.8
-flask-migrate==4.0.5
-Werkzeug==2.2.3
+flask
+flask-restx
+python-dotenv
+requests
+psycopg2-binary
+flask-sqlalchemy
+python-decouple
+flask-migrate
+Werkzeug
