changes database structure

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,8 @@
 Flask
 Flask-SQLAlchemy
-SQLAlchemy
 Flask-Migrate
-Flask-RESTX
-jsonschema
-python-dotenv
 psycopg2-binary
+python-dotenv
 Werkzeug
-redis
+flask-restx
 requests
-alembic
-gunicorn
-PyJWT
-hvac
-pytest
-pytest-mock
-
-# cloudSQL pg 8000
